Fix #interface alignment issue >1400px

--- a/sass/_env.scss
+++ b/sass/_env.scss
@@ -67,6 +67,8 @@
     margin: 0 auto;
     position: absolute;
     top: 140px;
+    left: 0;
+    right: 0;
     bottom: 90px;
 }
 
